--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+	
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -113,13 +114,13 @@
 </style>
 
 
-  </head>
-  <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+</head>
+<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Muneeb Urerehman</a>
+	      <a class="navbar-brand" href="index.html">Muneeb Ur Rehman</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -130,20 +131,24 @@
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 			  <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
-	          <li class="nav-item"><a href="#project-section" class="nav-link"><span>Projects</span></a></li>
+	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
 	    </div>
 	  </nav>
-	  <section id="home-section" class="hero">
+
+
+
+
+<section id="home-section" class="hero" >
 		  <div class="home-slider  owl-carousel">
 	       <div class="slider-item ">
 	      	<div class="overlay"></div>
-	         <div class="container">
+	         <div class="container"  >
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/my1.jpg);">
-	          	 <div class="overlay"></div>
+	        <div class="one-third js-fullheight order-md-last img" style="background-image:url(images/my11-min.png);"  >
+	          	 <div class="overlay" ></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
@@ -199,7 +204,7 @@
 	        </div>
 	      </div>
 		</div>
-    </section>
+</section>
 
 
 
@@ -288,7 +293,7 @@
 
 
 
-<<!--  
+<!--
 <section class="ftco-section" id="services-section">
 	<div class="container">
 		<div class="row justify-content-center py-5 mt-5">
@@ -364,7 +369,6 @@
 	</div>
 </section>
 -->
-
 <section class="ftco-section" id="skills-section">
 	<div class="container">
 		<div class="row justify-content-center pb-5">
@@ -447,70 +451,70 @@
 
 
 
-<<!--    
+   
 <section class="ftco-section ftco-project" id="projects-section">
 <div class="container">
 	<div class="row justify-content-center pb-5">
   <div class="col-md-12 heading-section text-center ftco-animate">
 	  <h1 class="big big-2">Projects</h1>
 	<h2 class="mb-4">Our Projects</h2>
-	<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+	<p>Transforming data into actionable insights with the power of machine learning. I specialize in uncovering patterns and building predictive models that drive innovation and decision-making. Explore my projects to see how I use data science to solve real-world challenges and create meaningful impact.</p>
   </div>
 </div>
 	<div class="row">
 		<div class="col-md-4">
-			<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);">
+			<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/inventray.png);">
 				<div class="overlay"></div>
 				<div class="text text-center p-4">
-					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-					<span>Web Design</span>
+					<h3><a href="https://github.com/Muneeb502/Inventory-Management-System/">Inventory Management System</a></h3>
+                    <span>Python Development</span>
 				</div>
 			</div>
 		  </div>
 		  <div class="col-md-8">
-			<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);">
+			<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/linear.png); ">
 				<div class="overlay"></div>
 				<div class="text text-center p-4">
-					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-					<span>Web Design</span>
+					<h3><a href="https://github.com/Muneeb502/Simple-linear-Regression/">Simple and Multiple Linear Regression</a></h3>
+					<span>Data Science</span>
 				</div>
 			</div>
 		  </div>
 
 		<div class="col-md-8">
-			<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);">
+			<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/api.png);">
 				<div class="overlay"></div>
 				<div class="text text-center p-4">
-					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-					<span>Web Design</span>
+					<h3><a href="https://github.com/Muneeb502/testing-API-s-using-postman--flask-framework/">API Testing</a></h3>
+					<span>Postman</span>
 				</div>
 			</div>
 
-			<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-6.jpg);">
+			<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/dataclean.png);">
 				<div class="overlay"></div>
 				<div class="text text-center p-4">
-					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-					<span>Web Design</span>
+					<h3><a href="https://github.com/Muneeb502/Cleaning-employee_data">Data Cleaning Techniques</a></h3>
+					<span>Data Preparation</span>
 				</div>
 			</div>
 		</div>
 		<div class="col-md-4">
 			<div class="row">
 				<div class="col-md-12">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/basicfile.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<h3><a href="https://github.com/Muneeb502/Basic-Text-File-Processing-">Text File Processing</a></h3>
+							<span>Python Development</span>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-12">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg);">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/flask.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<h3><a href="https://github.com/Muneeb502/flask-mini-project">Flask Application</a></h3>
+							<span>Web Development</span>
 						</div>
 					</div>
 				</div>
@@ -518,7 +522,7 @@
 		</div>
 	</div>
 </div>
-</section>-->
+</section>
 
 
 
@@ -608,18 +612,18 @@
 
 	<div class="row no-gutters block-9">
 	  <div class="col-md-6 order-md-last d-flex">
-		<form action="#" class="bg-light p-4 p-md-5 contact-form">
+		<form action="/submitted" method="post" class="bg-light p-4 p-md-5 contact-form">
 		  <div class="form-group">
-			<input type="text" class="form-control" placeholder="Your Name">
+			<input  name="name"   type="text" class="form-control" placeholder="Your Name">
 		  </div>
 		  <div class="form-group">
-			<input type="text" class="form-control" placeholder="Your Email">
+			<input name="email" type="email" class="form-control" placeholder="Your Email">
 		  </div>
 		  <div class="form-group">
-			<input type="text" class="form-control" placeholder="Subject">
+			<input name="subject" type="text" class="form-control" placeholder="Subject">
 		  </div>
 		  <div class="form-group">
-			<textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+			<textarea  name="message" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
 		  </div>
 		  <div class="form-group">
 			<input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
@@ -648,6 +652,8 @@
 			<li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=100075399709414"><span class="icon-facebook"></span></a></li>
 			<li class="ftco-animate"><a href="https://www.instagram.com/saif_ur502"><span class="icon-instagram"></span></a></li>
 			<li class="ftco-animate"><a href="https://linkedin.com/in/muneeb-ur-rehman-99580b277"><span class="icon-linkedin"></span></a></li>
+			
+
 
 		  </ul>
 		</div>
