--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 	      	<div class="overlay"></div>
 	         <div class="container"  >
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	        <div class="one-third js-fullheight order-md-last img" style="background-image:url(images/my11-min.png);"  >
+	        <div class="one-third js-fullheight order-md-last img" style="background-image:url(images/my.jpeg);"  >
 	          	 <div class="overlay" ></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -197,7 +197,7 @@
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://wa.me/923061619009" class="btn btn-primary py-3 px-4">Hire me</a> 
-							<a href="https://github.com/Muneeb502" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+						<a href="https://github.com/Muneeb502" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -242,7 +242,7 @@
 				<span class="number" data-number="29">0</span>
 				<span>Project complete</span>
 			</p>
-			<p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>
+			<p><a href="my_cv_02.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
 		  </div>
 		  </div>
 		</div>
@@ -284,7 +284,7 @@
 		</div>
 		<div class="row justify-content-center mt-5">
 			<div class="col-md-6 text-center ftco-animate">
-				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+				<p><a href="my_cv_02.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
 			</div>
 		</div>
 	</div>
@@ -564,7 +564,8 @@
 				<div class="col-md-7 ftco-animate text-center">
 					<h2>I'm <span>Available</span> for freelancing</h2>
 					<p>Available to bring your projects to life with expertise in Python, data science, and web development.</p>
-					<p class="mb-0"><a href="https://wa.me/923061619009" class="btn btn-primary py-3 px-5">Hire me</a></p>
+					<p class="mb-0"><a href="https://wa.me/923061619009" class="btn btn-primary py-3 px-5">Hire me</a>
+					</p>
 				</div>
 			</div>
 		</div>
