--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 				<span class="number" data-number="29">0</span>
 				<span>Project complete</span>
 			</p>
-			<p><a href="my_cv_02.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
+			<p><a href="my_cv_02.pdf" class="btn btn-primary py-3 px-3" download>Download CV</a></p>
 		  </div>
 		  </div>
 		</div>
@@ -284,7 +284,7 @@
 		</div>
 		<div class="row justify-content-center mt-5">
 			<div class="col-md-6 text-center ftco-animate">
-				<p><a href="my_cv_02.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
+				<p><a href="my_cv_02.pdf" class="btn btn-primary py-4 px-5" download>Download CV</a></p>
 			</div>
 		</div>
 	</div>
